Stop jumping around on Chat page.

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -48,10 +48,6 @@ div[variant="success"] .card-header {
   display: block;
 }
 
-body {
-  scrollbar-gutter: stable both-edges;
-}
-
 body.fd {
   background-image: url('~static/wallpaper.png');
 }
